# Artistry

./: .gitignore  Makefile  artistry  imgui.ini  main.cc  meson.build  paint-app
include/: callbacks.hh  drawing_manager.hh  gui_manager.hh  save.hh  shader_manager.hh  utils.hh  window_manager.hh
lib/glad/: glad-setup.zsh
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: PKGBUILD
src/: callbacks.cc  drawing_manager.cc  gui_manager.cc  main.cc  save.cc  shader_manager.cc  utils.cc  window_manager.cc
src/shaders/: shader.frag  shader.vert
